--- a/client/src/lib/translations/si.json
+++ b/client/src/lib/translations/si.json
@@ -25,24 +25,28 @@
         "volunteerCard": {
             "title": "ස්වේච්ඡා සේවා",
             "description": "ස්වේච්ඡා සේවකයෙකු ලෙස ලියාපදිංචි වන්න හෝ සොයා ගන්න"
-        }
+        },
+        "disclaimer": "⚠️ ආරක්ෂක මතක් කිරීම: මෙහි ඉදිරිපත් කරන සියලුම තොරතුරු ප්‍රසිද්ධියේ සියලුම පුද්ගලයන්ට දැකගත හැක . කරුණාකර කිසිදු දුරකථන අංකයකට හෝ පුද්ගලයෙකුට මුදල් නොයවන්න; මෙම වේදිකාව මූල්‍ය ගනුදෙනු සිදු නොකරන අතර එවැනි ඉල්ලීම් වංචනික විය හැකිය."
     },
     "helpRequests": {
         "title": "උදව් ඉල්ලීම්",
-        "subtitle": "ඔබට හෝ ඔබ දන්නා කෙනෙකුට උදව් අවශ්‍ය නම් ඉල්ලීම් කරන්න",
+        "subtitle": "ඔබට හෝ ඔබ දන්නා කෙනෙකුට උදව් අවශ්‍ය නම් ඉල්ලීම් කරන්න. උදව් ලැබුණු පසු, කරුණාකර ඔබගේ ඉල්ලීම 'උදව් ලැබුණා' ලෙස සලකුණු කරන්න. එය අන් අයට උපකාරී වනු ඇත.",
         "noRequests": "උදව් ඉල්ලීම් නොමැත",
         "firstRequest": "පළමු ඉල්ලීම එක් කරන්න",
         "loading": "තොරතුරු පූරණය වෙමින් පවතී...",
         "status": {
             "pending": "උදව් අවශ්‍යයි",
-            "fulfilled": "විසඳන ලදී"
+            "fulfilled": "උදව් ලබුණා"
         },
         "card": {
             "address": "ලිපිනය",
             "helpNeeded": "අවශ්‍ය උදව්",
             "additionalDetails": "අමතර විස්තර",
             "contactInfo": "සම්බන්ධතා",
-            "requestedOn": "ඉල්ලීම කළ දිනය"
+            "requestedOn": "ඉල්ලීම කළ දිනය",
+            "statusInstruction": "කරුණාකර උදව් ලැබුණු පසු මෙම ඉල්ලීමේ තත්වය යාවත්කාලීන කරන්න. එය අන් අයගේ කාලය අපතේ නොයාමට උපකාරී වේ.",
+            "markAsReceived": "උදව් ලැබුණා ලෙස සලකුණු කරන්න",
+            "confirmStatusUpdate": "ඔබට උදව් ලැබී තිබේද? එසේ නම්, මෙම ඉල්ලීම \"උදව් ලබුණා\" ලෙස සලකුණු කරන්න. අනෙක් අයට මෙය තවදුරටත් පෙන්වන්නේ නැත."
         },
         "form": {
             "title": "උදව් ඉල්ලීමක් එක් කරන්න",
@@ -60,7 +64,17 @@
             "helpDescriptionPlaceholder": "උදා: ආහාර, පානීය ජලය, ඖෂධ",
             "additionalDetails": "අමතර විස්තර (විකල්ප)",
             "additionalDetailsPlaceholder": "අමතර තොරතුරු",
-            "note": "සටහන: ඔබේ සම්බන්ධතා තොරතුරු පරිත්‍යාගශීලීන්ට දර්ශනය වනු ඇත."
+            "note": "සටහන: ඔබේ සම්බන්ධතා තොරතුරු පරිත්‍යාගශීලීන්ට දර්ශනය වනු ඇත.",
+            "category": "ඔබට අවශ්‍ය කුමන උපකාරයක්ද?",
+            "categoryPlaceholder": "තෝරන්න"
+        },
+        "categories": {
+            "all": "සියලුම වර්ග වලින් සොයන්න",
+            "food": "ආහාර",
+            "education": "අධ්‍යාපන",
+            "shelter": "නවාතැන්",
+            "transport": "ප්‍රවාහන",
+            "other": "වෙනත්"
         }
     },
     "donations": {
@@ -85,7 +99,7 @@
         },
         "form": {
             "title": "ආධාරයක් එක් කරන්න",
-            "description": "ඔබට පරිත්‍යාග කළ හැකි අයිතම පිළිබඳ තොරතුරු ලබා දෙන්න",
+            "description": "විස්තරය (විකල්ප)",
             "name": "නම",
             "namePlaceholder": "ඔබේ නම",
             "district": "දිස්ත්‍රික්කය",
@@ -96,7 +110,6 @@
             "phonePlaceholder": "07x xxxxxxx",
             "items": "පරිත්‍යාග කරන අයිතම",
             "itemsPlaceholder": "උදා: සහල්, කිරි පිටි, ජලය",
-            "description": "විස්තරය (විකල්ප)",
             "descriptionPlaceholder": "අයිතම පිළිබඳ අමතර තොරතුරු"
         }
     },
@@ -115,7 +128,7 @@
         },
         "form": {
             "title": "එකතු කිරීමේ මධ්‍යස්ථානයක් එක් කරන්න",
-            "description": "ආධාර භාර දිය හැකි මධ්‍යස්ථානයක් පිළිබඳ විස්තර එක් කරන්න",
+            "description": "විස්තරය",
             "name": "මධ්‍යස්ථානයේ නම",
             "namePlaceholder": "උදා: කොළඹ සහන මධ්‍යස්ථානය",
             "district": "දිස්ත්‍රික්කය",
@@ -132,7 +145,6 @@
             "contactPhone": "දුරකථන අංකය",
             "contactPhonePlaceholder": "07x xxxxxxx",
             "additionalPhone": "අමතර දුරකථන අංකය (විකල්ප)",
-            "description": "විස්තරය",
             "descriptionPlaceholder": "මෙම ස්ථානයේ එකතු කරන අයිතම සඳහන් කරන්න (උදා: ආහාර, ඇඳුම්, ඖෂධ)",
             "contactImage": "සම්බන්ධ විය යුතු පුද්ගලයාගේ ඡායාරූපය (අවශ්‍යයි)",
             "contactImageNote": "මෙම ඡායාරූපය කාඩ්පතේ දර්ශනය වනු ඇත",
@@ -141,11 +153,18 @@
     },
     "education": {
         "title": "අධ්‍යාපන සහාය",
-        "subtitle": "පීඩාවට පත් සිසුන් සඳහා අධ්‍යාපනික ද්‍රව්‍ය සහ සහාය ඉල්ලීම් කරන්න",
+        "subtitle": "පීඩාවට පත් සිසුන් සඳහා අධ්‍යාපනික ද්‍රව්‍ය සහ සහාය ලබාදෙන්න",
+        "requestsTabTitle": "අධ්‍යාපන ඉල්ලීම්",
+        "offersTabTitle": "අධ්‍යාපන ආධාර",
         "addRequest": "ඉල්ලීමක් එක් කරන්න",
         "noRequests": "අධ්‍යාපන ඉල්ලීම් නොමැත",
         "noRequestsDesc": "පළමු අධ්‍යාපන ඉල්ලීම එක් කරන්න",
         "addFirstRequest": "පළමු ඉල්ලීම එක් කරන්න",
+        "offers": {
+            "noOffers": "අධ්‍යාපන ආධාර නොමැත",
+            "noOffersDesc": "පළමු අධ්‍යාපන ආධාර එක් කරන්න",
+            "addFirstOffer": "පළමු ආධාර එක් කරන්න"
+        },
         "card": {
             "badge": "අධ්‍යාපනය",
             "needs": "අවශ්‍යතා"
@@ -179,6 +198,10 @@
                 "addressRequired": "ලිපිනය අවශ්‍යයි",
                 "needsRequired": "අවශ්‍යතා සඳහන් කිරීම අවශ්‍යයි"
             }
+        },
+        "tabs": {
+            "requests": "අධ්‍යාපනික ද්‍රව්‍ය සහ සහාය ඉල්ලීම් කරන්න",
+            "offers": "අධ්‍යාපනික ද්‍රව්‍ය සහ සහාය ලබාදෙන්න"
         }
     },
     "transport": {
@@ -286,7 +309,9 @@
         "select": "තෝරන්න",
         "note": "සටහන",
         "dateLocale": "si-LK",
-        "filterByDistrict": "දිස්ත්‍රික්කය අනුව පෙරහන් කරන්න",
+        "filterByDistrict": "දිස්ත්‍රික්කය අනුව තෝරන්න",
+        "filterByCategory": "උපකාරය අනුව තෝරන්න",
+        "clearFilters": "මකන්න",
         "selectDistrict": "දිස්ත්‍රික්කය තෝරන්න",
         "validation": {
             "required": "මෙම ක්ෂේත්‍රය අවශ්‍යයි",
@@ -296,10 +321,12 @@
             "addressRequired": "ලිපිනය අවශ්‍යයි",
             "helpDescriptionRequired": "උදව් ලබා ගැනීමට විස්තර නිවැරදිව ඇතුළත් කරන්න",
             "itemsRequired": "අයිතම අවශ්‍යයි"
-        }
+        },
+        "updating": "යාවත්කාලීන කරමින්...",
+        "readMore": "වැඩිදුර කියවන්න"
     },
     "districts": {
-        "all": "සියල්ල",
+        "all": "සියලුම දිස්ත්‍රික්ක වලින් සොයන්න",
         "colombo": "කොළඹ",
         "gampaha": "ගම්පහ",
         "kalutara": "කළුතර",
