--- a/client/src/lib/translations/ta.json
+++ b/client/src/lib/translations/ta.json
@@ -25,24 +25,28 @@
         "volunteerCard": {
             "title": "தன்னார்வ சேவைகள்",
             "description": "தன்னார்வலராகப் பதிவு செய்யுங்கள் அல்லது தன்னார்வலர்களைக் கண்டறியவும்"
-        }
+        },
+        "disclaimer": "⚠️ பாதுகாப்பு நினைவூட்டல்: இங்கு சமர்ப்பிக்கப்பட்ட அனைத்து தகவல்களும் பொதுவில் தெரியும். தயவுசெய்து எந்த தொலைபேசி எண்ணிற்கோ அல்லது தனிநபருக்கோ பணம் அனுப்ப வேண்டாம்; இந்த தளம் நிதி பரிவர்த்தனைகளை கையாளாது மற்றும் அத்தகைய கோரிக்கைகள் மோசடியானதாக இருக்கலாம்."
     },
     "helpRequests": {
         "title": "உதவிக் கோரிக்கைகள்",
-        "subtitle": "உங்களுக்கோ அல்லது உங்களுக்குத் தெரிந்தவருக்கோ உதவி தேவைப்பட்டால் கோரிக்கை விடுங்கள்",
+        "subtitle": "உங்களுக்கோ அல்லது உங்களுக்குத் தெரிந்தவருக்கோ உதவி தேவைப்பட்டால் கோரிக்கை விடுங்கள். உதவி பெற்ற பிறகு, மற்றவர்களுக்கு உதவ உங்கள் கோரிக்கையை 'உதவி கிடைத்தது' எனக் குறிக்கவும்.",
         "noRequests": "உதவிக் கோரிக்கைகள் இல்லை",
         "firstRequest": "முதல் கோரிக்கையைச் சேர்க்கவும்",
         "loading": "தகவல் ஏற்றப்படுகிறது...",
         "status": {
             "pending": "உதவி தேவை",
-            "fulfilled": "தீர்க்கப்பட்டது"
+            "fulfilled": "உதவி பெற்றது"
         },
         "card": {
             "address": "முகவரி",
             "helpNeeded": "தேவையான உதவி",
             "additionalDetails": "கூடுதல் விவரங்கள்",
             "contactInfo": "தொடர்பு",
-            "requestedOn": "கோரப்பட்ட தேதி"
+            "requestedOn": "கோரப்பட்ட தேதி",
+            "statusInstruction": "உதவி பெற்ற பின் இந்த கோரிக்கையின் நிலையை புதுப்பிக்கவும். இது மற்றவர்களின் நேரத்தை வீணாக்காமல் இருக்க உதவும்.",
+            "markAsReceived": "உதவி பெற்றதாக குறி",
+            "confirmStatusUpdate": "உங்களுக்கு உதவி கிடைத்துவிட்டதா? ஆம் எனில், இந்த கோரிக்கை \"உதவி பெற்றது\" எனக் குறிக்கப்படும் மற்றும் மற்றவர்களுக்கு இனி காண்பிக்கப்படாது."
         },
         "form": {
             "title": "உதவிக் கோரிக்கையைச் சேர்க்கவும்",
@@ -60,7 +64,17 @@
             "helpDescriptionPlaceholder": "உதா: உணவு, குடிநீர், மருந்து",
             "additionalDetails": "கூடுதல் விவரங்கள் (விருப்பத்தேர்வு)",
             "additionalDetailsPlaceholder": "கூடுதல் தகவல்",
-            "note": "குறிப்பு: உங்கள் தொடர்புத் தகவல் நன்கொடையாளர்களுக்குக் காட்டப்படும்."
+            "note": "குறிப்பு: உங்கள் தொடர்புத் தகவல் நன்கொடையாளர்களுக்குக் காட்டப்படும்.",
+            "category": "உங்களுக்கு என்ன வகையான உதவி தேவை?",
+            "categoryPlaceholder": "தெரிவு செய்க"
+        },
+        "categories": {
+            "all": "அனைத்து வகைகளிலிருந்தும் வடிகட்டவும்",
+            "food": "உணவு",
+            "education": "கல்வி",
+            "shelter": "தங்குமிடம்",
+            "transport": "போக்குவரத்து",
+            "other": "மற்றவை"
         }
     },
     "donations": {
@@ -85,7 +99,7 @@
         },
         "form": {
             "title": "நன்கொடையைச் சேர்க்கவும்",
-            "description": "நீங்கள் நன்கொடையாக வழங்கக்கூடிய பொருட்கள் பற்றிய தகவலை வழங்கவும்",
+            "description": "விளக்கம் (விருப்பத்தேர்வு)",
             "name": "பெயர்",
             "namePlaceholder": "உங்கள் பெயர்",
             "district": "மாவட்டம்",
@@ -96,7 +110,6 @@
             "phonePlaceholder": "07x xxxxxxx",
             "items": "நன்கொடை பொருட்கள்",
             "itemsPlaceholder": "உதா: அரிசி, பால் மா, தண்ணீர்",
-            "description": "விளக்கம் (விருப்பத்தேர்வு)",
             "descriptionPlaceholder": "பொருட்கள் பற்றிய கூடுதல் தகவல்"
         }
     },
@@ -115,7 +128,7 @@
         },
         "form": {
             "title": "சேகரிப்பு நிலையத்தைச் சேர்க்கவும்",
-            "description": "நன்கொடைகளை ஒப்படைக்கக்கூடிய நிலையம் பற்றிய விவரங்களைச் சேர்க்கவும்",
+            "description": "விளக்கம்",
             "name": "நிலையத்தின் பெயர்",
             "namePlaceholder": "உதா: கொழும்பு நிவாரண மையம்",
             "district": "மாவட்டம்",
@@ -132,7 +145,6 @@
             "contactPhone": "தொலைபேசி எண்",
             "contactPhonePlaceholder": "07x xxxxxxx",
             "additionalPhone": "கூடுதல் தொலைபேசி (விருப்பத்தேர்வு)",
-            "description": "விளக்கம்",
             "descriptionPlaceholder": "இங்கு சேகரிக்கப்படும் பொருட்களைக் குறிப்பிடவும் (உதா: உணவு, உடை, மருந்து)",
             "contactImage": "தொடர்பு கொள்ள வேண்டியவரின் புகைப்படம் (கட்டாயம்)",
             "contactImageNote": "இந்தப் புகைப்படம் அட்டையில் காட்டப்படும்",
@@ -141,11 +153,18 @@
     },
     "education": {
         "title": "கல்வி உதவி",
-        "subtitle": "பாதிக்கப்பட்ட மாணவர்களுக்கான கல்விப் பொருட்கள் மற்றும் ஆதரவைக் கோருங்கள்",
+        "subtitle": "பாதிக்கப்பட்ட மாணவர்களுக்கான கல்விப் பொருட்கள் மற்றும் ஆதரவை வழங்கவும்",
+        "requestsTabTitle": "கல்விக் கோரிக்கைகள்",
+        "offersTabTitle": "கல்விச் சலுகைகள்",
         "addRequest": "கோரிக்கையைச் சேர்க்கவும்",
         "noRequests": "கல்விக் கோரிக்கைகள் இல்லை",
         "noRequestsDesc": "முதல் கல்விக் கோரிக்கையைச் சேர்க்கவும்",
         "addFirstRequest": "முதல் கோரிக்கையைச் சேர்க்கவும்",
+        "offers": {
+            "noOffers": "கல்விச் சலுகைகள் இல்லை",
+            "noOffersDesc": "முதல் கல்விச் சலுகையைச் சேர்க்கவும்",
+            "addFirstOffer": "முதல் சலுகையைச் சேர்க்கவும்"
+        },
         "card": {
             "badge": "கல்வி",
             "needs": "தேவைகள்"
@@ -179,6 +198,10 @@
                 "addressRequired": "முகவரி அவசியம்",
                 "needsRequired": "தேவைகள் அவசியம்"
             }
+        },
+        "tabs": {
+            "requests": "கல்விப் பொருட்கள் மற்றும் ஆதரவைக் கோருங்கள்",
+            "offers": "கல்விப் பொருட்கள் மற்றும் ஆதரவை வழங்கவும்"
         }
     },
     "transport": {
@@ -286,7 +309,9 @@
         "select": "தெரிவு செய்க",
         "note": "குறிப்பு",
         "dateLocale": "ta-LK",
-        "filterByDistrict": "மாவட்ட வாரியாக வடிகட்டவும்",
+        "filterByDistrict": "மாவட்ட வாரியாக தேர்ந்தெடுக்கவும்",
+        "filterByCategory": "உதவி வகை வாரியாக தேர்ந்தெடுக்கவும்",
+        "clearFilters": "அழி",
         "selectDistrict": "மாவட்டத்தைத் தெரிவு செய்க",
         "validation": {
             "required": "இப்புலம் அவசியம்",
@@ -296,11 +321,12 @@
             "addressRequired": "முகவரி அவசியம்",
             "helpDescriptionRequired": "உதவி பெற விவரங்களைச் சரியாகச் சேர்க்கவும்",
             "itemsRequired": "பொருட்கள் அவசியம்"
-        }
+        },
+        "updating": "புதுப்பிக்கிறது...",
+        "readMore": "மேலும் வாசிக்க"
     },
-    "districts": {
-        "all": "அனைத்தும்",
-        "colombo": "கொழும்பு",
+      "districts": {
+        "all": "அனைத்து மாவட்டங்களிலிருந்தும் தேடவும்",        "colombo": "கொழும்பு",
         "gampaha": "கம்பஹா",
         "kalutara": "களுத்துறை",
         "kandy": "கண்டி",
