--- a/client/src/lib/translations/si.json
+++ b/client/src/lib/translations/si.json
@@ -323,7 +323,22 @@
             "itemsRequired": "අයිතම අවශ්‍යයි"
         },
         "updating": "යාවත්කාලීන කරමින්...",
-        "readMore": "වැඩිදුර කියවන්න"
+        "readMore": "වැඩිදුර කියවන්න",
+        "noAdditionalDetails": "අමතර විස්තර සපයා නැත"
+    },
+    "feedback": {
+        "button": "ප්‍රතිචාර",
+        "title": "ඔබේ ප්‍රතිචාර බෙදා ගන්න",
+        "description": "මෙම වෙබ් අඩවිය වැඩිදියුණු කිරීමට ඔබේ යෝජනා අපට වැදගත් වේ.",
+        "nameLabel": "ඔබේ නම (විකල්ප)",
+        "namePlaceholder": "ඔබේ නම ඇතුළත් කරන්න",
+        "thoughtsLabel": "මෙම වෙබ් අඩවිය ගැන ඔබ සිතන්නේ කුමක්ද?",
+        "thoughtsPlaceholder": "ඔබේ අදහස් බෙදා ගන්න...",
+        "improvementsLabel": "අප වැඩිදියුණු කළ යුත්තේ මොනවාද?",
+        "improvementsPlaceholder": "ඔබේ යෝජනා...",
+        "submitButton": "ප්‍රතිචාරය ඉදිරිපත් කරන්න",
+        "successMessage": "ඔබේ ප්‍රතිචාරයට ස්තූතියි!",
+        "errorMessage": "ඉදිරිපත් කිරීමට අසමත් විය. කරුණාකර නැවත උත්සාහ කරන්න."
     },
     "districts": {
         "all": "සියලුම දිස්ත්‍රික්ක වලින් සොයන්න",
