--- a/client/src/lib/translations/ta.json
+++ b/client/src/lib/translations/ta.json
@@ -323,10 +323,26 @@
             "itemsRequired": "பொருட்கள் அவசியம்"
         },
         "updating": "புதுப்பிக்கிறது...",
-        "readMore": "மேலும் வாசிக்க"
+        "readMore": "மேலும் வாசிக்க",
+        "noAdditionalDetails": "கூடுதல் விவரங்கள் வழங்கப்படவில்லை"
     },
-      "districts": {
-        "all": "அனைத்து மாவட்டங்களிலிருந்தும் தேடவும்",        "colombo": "கொழும்பு",
+    "feedback": {
+        "button": "கருத்து",
+        "title": "உங்கள் கருத்தைப் பகிரவும்",
+        "description": "இந்த வலைத்தளத்தை மேம்படுத்த எங்களுக்கு உதவவும். உங்கள் பரிந்துரைகள் மதிப்புமிக்கவை.",
+        "nameLabel": "உங்கள் பெயர் (விருப்பம்)",
+        "namePlaceholder": "உங்கள் பெயரை உள்ளிடவும்",
+        "thoughtsLabel": "இந்த தளத்தைப் பற்றி நீங்கள் என்ன நினைக்கிறீர்கள்?",
+        "thoughtsPlaceholder": "உங்கள் எண்ணங்களைப் பகிரவும்...",
+        "improvementsLabel": "நாம் எதை மேம்படுத்த வேண்டும்?",
+        "improvementsPlaceholder": "உங்கள் பரிந்துரைகள்...",
+        "submitButton": "கருத்தை சமர்ப்பிக்கவும்",
+        "successMessage": "உங்கள் கருத்துக்கு நன்றி!",
+        "errorMessage": "சமர்ப்பிக்க முடியவில்லை. மீண்டும் முயற்சிக்கவும்."
+    },
+    "districts": {
+        "all": "அனைத்து மாவட்டங்களிலிருந்தும் தேடவும்",
+        "colombo": "கொழும்பு",
         "gampaha": "கம்பஹா",
         "kalutara": "களுத்துறை",
         "kandy": "கண்டி",
