--- a/client/src/lib/translations/si.json
+++ b/client/src/lib/translations/si.json
@@ -39,19 +39,6 @@
             "fulfilled": "උදව් ලබුණා"
         },
         "card": {
-            "address": "ලිපිනය",
-            "helpNeeded": "අවශ්‍ය උදව්",
-            "additionalDetails": "අමතර විස්තර",
-            "contactInfo": "සම්බන්ධතා",
-            "requestedOn": "ඉල්ලීම කළ දිනය",
-            "statusInstruction": "කරුණාකර උදව් ලැබුණු පසු මෙම ඉල්ලීමේ තත්වය යාවත්කාලීන කරන්න. එය අන් අයගේ කාලය අපතේ නොයාමට උපකාරී වේ.",
-            "markAsReceived": "උදව් ලැබුණා ලෙස සලකුණු කරන්න",
-            "confirmStatusUpdate": "ඔබට උදව් ලැබී තිබේද? එසේ නම්, මෙම ඉල්ලීම \"උදව් ලබුණා\" ලෙස සලකුණු කරන්න. අනෙක් අයට මෙය තවදුරටත් පෙන්වන්නේ නැත."
-        },
-        "form": {
-            "title": "උදව් ඉල්ලීමක් එක් කරන්න",
-            "description": "ඔබට හෝ ඔබ දන්නා කෙනෙකුට අවශ්‍ය උදව් පිළිබඳ තොරතුරු ලබා දෙන්න",
-            "name": "නම",
             "namePlaceholder": "ඔබේ නම",
             "district": "දිස්ත්‍රික්කය",
             "districtPlaceholder": "තෝරන්න",
@@ -95,7 +82,13 @@
             "description": "විස්තරය",
             "donor": "පරිත්‍යාගශීලියා",
             "donatedOn": "පරිත්‍යාග කළ දිනය",
-            "collectButton": "එකතු කර ගන්න"
+            "collectButton": "එකතු කර ගන්න",
+            "dialog": {
+                "title": "ආධාර විස්තර",
+                "itemsToDonate": "පරිත්‍යාග කරන අයිතම",
+                "address": "ලිපිනය",
+                "description": "විස්තරය"
+            }
         },
         "form": {
             "title": "ආධාරයක් එක් කරන්න",
