--- a/client/src/lib/translations/ta.json
+++ b/client/src/lib/translations/ta.json
@@ -39,19 +39,6 @@
             "fulfilled": "உதவி பெற்றது"
         },
         "card": {
-            "address": "முகவரி",
-            "helpNeeded": "தேவையான உதவி",
-            "additionalDetails": "கூடுதல் விவரங்கள்",
-            "contactInfo": "தொடர்பு",
-            "requestedOn": "கோரப்பட்ட தேதி",
-            "statusInstruction": "உதவி பெற்ற பின் இந்த கோரிக்கையின் நிலையை புதுப்பிக்கவும். இது மற்றவர்களின் நேரத்தை வீணாக்காமல் இருக்க உதவும்.",
-            "markAsReceived": "உதவி பெற்றதாக குறி",
-            "confirmStatusUpdate": "உங்களுக்கு உதவி கிடைத்துவிட்டதா? ஆம் எனில், இந்த கோரிக்கை \"உதவி பெற்றது\" எனக் குறிக்கப்படும் மற்றும் மற்றவர்களுக்கு இனி காண்பிக்கப்படாது."
-        },
-        "form": {
-            "title": "உதவிக் கோரிக்கையைச் சேர்க்கவும்",
-            "description": "உங்களுக்கோ அல்லது உங்களுக்குத் தெரிந்தவருக்கோ தேவையான உதவி பற்றிய தகவலை வழங்கவும்",
-            "name": "பெயர்",
             "namePlaceholder": "உங்கள் பெயர்",
             "district": "மாவட்டம்",
             "districtPlaceholder": "தெரிவு செய்க",
@@ -95,7 +82,13 @@
             "description": "விளக்கம்",
             "donor": "நன்கொடையாளர்",
             "donatedOn": "நன்கொடை அளிக்கப்பட்ட தேதி",
-            "collectButton": "சேகரிக்கவும்"
+            "collectButton": "சேகரிக்கவும்",
+            "dialog": {
+                "title": "நன்கொடை விவரங்கள்",
+                "itemsToDonate": "நன்கொடை பொருட்கள்",
+                "address": "முகவரி",
+                "description": "விளக்கம்"
+            }
         },
         "form": {
             "title": "நன்கொடையைச் சேர்க்கவும்",
