--- a/client/src/lib/translations/si.json
+++ b/client/src/lib/translations/si.json
@@ -68,7 +68,7 @@
     "donations":  {
                       "title":  "ආධාර",
                       "subtitle":  "ගංවතුරෙන් පීඩාවට පත් ප්‍රජාවන්ට සහන",
-                      "instructions":  "ඔබට මෙම අයිතම අවශ්‍ය නම්, කරුණාකර පරිත්‍යාගශීලියාගේ දුරකථන අංකය අමතන්න",
+                      "instructions":  "ඔබට මෙම ද්‍රව්‍යඅවශ්‍ය නම්, කරුණාකර පරිත්‍යාගශීලියාගේ දුරකථන අංකය අමතන්න",
                       "noDonations":  "ආධාර නොමැත",
                       "loading":  "තොරතුරු පූරණය වෙමින් පවතී...",
                       "status":  {
@@ -104,7 +104,7 @@
                                    "phonePlaceholder":  "07x xxxxxxx",
                                    "items":  "පරිත්‍යාග කරන අයිතම",
                                    "itemsPlaceholder":  "උදා: සහල්, කිරි පිටි, ජලය",
-                                   "descriptionPlaceholder":  "අයිතම පිළිබඳ අමතර තොරතුරු"
+                                   "descriptionPlaceholder":  "ද්‍රව්‍යපිළිබඳ අමතර තොරතුරු"
                                }
                   },
     "locations":  {
@@ -139,7 +139,7 @@
                                    "contactPhone":  "දුරකථන අංකය",
                                    "contactPhonePlaceholder":  "07x xxxxxxx",
                                    "additionalPhone":  "අමතර දුරකථන අංකය (විකල්ප)",
-                                   "descriptionPlaceholder":  "මෙම ස්ථානයේ එකතු කරන අයිතම සඳහන් කරන්න (උදා: ආහාර, ඇඳුම්, ඖෂධ)",
+                                   "descriptionPlaceholder":  "මෙම ස්ථානයේ එකතු කරන ද්‍රව්‍යසඳහන් කරන්න (උදා: ආහාර, ඇඳුම්, ඖෂධ)",
                                    "contactImage":  "සම්බන්ධ විය යුතු පුද්ගලයාගේ ඡායාරූපය (අවශ්‍යයි)",
                                    "contactImageNote":  "මෙම ඡායාරූපය කාඩ්පතේ දර්ශනය වනු ඇත",
                                    "locationImages":  "මධ්‍යස්ථානයේ ඡායාරූප (අවම 1 - උපරිම 5)"
@@ -323,7 +323,7 @@
                                       "districtRequired":  "දිස්ත්‍රික්කය අවශ්‍යයි",
                                       "addressRequired":  "ලිපිනය අවශ්‍යයි",
                                       "helpDescriptionRequired":  "උදව් ලබා ගැනීමට විස්තර නිවැරදිව ඇතුළත් කරන්න",
-                                      "itemsRequired":  "අයිතම අවශ්‍යයි"
+                                      "itemsRequired":  "ද්‍රව්‍යඅවශ්‍යයි"
                                   },
                    "updating":  "යාවත්කාලීන කරමින්...",
                    "readMore":  "වැඩිදුර කියවන්න",
